--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -1,9 +1,13 @@
-<h1>hello {{name}} !!!!</h1>
-   <form action="add" method="post">
+<h1>Calculator</h1>
+   <form action="operate" method="post">
     {% csrf_token %}
-                Enter a 1st number: <input type="text" name="num1"  placeholder="enter the number"></n>
-                Enter a 2nd number: <input type="text" name="num2" placeholder="enter the number">
-                <input type="submit"></n>
-       {{result}}
+       <p>Enter a 1st number: <input type="text" name="num1"  placeholder="enter the number"></p>
 
-            </form>
+       <p> Enter a 2nd number: <input type="text" name="num2" placeholder="enter the number"></p>
+          <button type="submit" name="add">ADD</button>
+          <button type="submit" name="sub">SUB</button>
+          <button type="submit" name="mul">MUL</button>
+          <button type="submit" name="div">DIV</button>
+       Your Result : {{result}}
+
+   </form>
