--- a/lists/templates/home_POST.html
+++ b/lists/templates/home_POST.html
@@ -10,7 +10,7 @@
           <button type="submit" name="mul" id="mul">MUL</button>
           <button type="submit" name="div" id="div">DIV</button>
        </form>
-       <result> Your Result : {{res}} </result>
+       <result> Your Result : {{res}}
        <table>
            {% for cal_his_list in result %}
             <tr>
@@ -20,4 +20,5 @@
             </tr>
          {% endfor %}
        </table>
+           </result>
  </calculator>
