--- a/lists/templates/home_GET.html
+++ b/lists/templates/home_GET.html
@@ -10,7 +10,7 @@
           <button type="submit" name="mul" id="mul">MUL</button>
           <button type="submit" name="div" id="div">DIV</button>
        </form>
-       <result> Your Result : {{result}}
+       <result> Your Result : {{res}}
        <table>
            {% for cal_his_list in result %}
             <tr>
